# RT

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
doc/: milestone1.md  uml.gaphor  uml.md
doc/Ausarbeitung/: main.tex  sources.bib  titlepage.tex
src/: camera.rs  color.rs  hittable.rs  main.rs  material.rs  ray.rs  sphere.rs  util.rs  vec3.rs
src/hittable/: hit_record.rs  hittable_list.rs  mod.rs  sphere.rs
src/material/: default_material.rs  dielectric.rs  diffuse.rs  lambertian.rs  light.rs  metal.rs  mod.rs
