[package]
name = "RT"
description = "A Ray Tracer, following 'Ray Tracing in One Weekend'"
version = "0.2.0"
edition = "2021"
authors = ["Christian Korn <c.a.konr@gmx.de>"]
repository = "https://github.com/MacAphon/RT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
float-ord = "0.3.2"
image = "0.24.5"
rand = "0.8.5"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.17"
